CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV_ROLE__c.object
<CustomObject>
    <description>Identifies the primary applicant/head of household for a case</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CASE_ID__c</fullName>
        <formula>IDN_CASE_INDIV__r.IDN_CASE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CASE_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ignoreEndDateValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ignoreEndDateValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_ROLE_CASE__c</fullName>
        <description>Role</description>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00355</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Individual ID</label>
        <referenceTo>T_SBSD_CASE_INDIV__c</referenceTo>
        <relationshipLabel>Case Individual Role</relationshipLabel>
        <relationshipName>Case_Individual_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case Individual Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Individual Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Individual Role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_End_Date_Validation</fullName>
        <active>true</active>
        <description>Effective End Date must be greater than Effective Begin Date.</description>
        <errorConditionFormula>NOT(IDN_CASE_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c)  &amp;&amp; NOT(IDN_CASE_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c)  &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c &amp;&amp; NOT(ignoreEndDateValidation__c)</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
    </validationRules>
</CustomObject>