CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV_ROLE__c/validationRules/Effective_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Date_Validation</fullName>
    <active>false</active>
    <description>Effective End Date must be greater than Effective Begin Date.</description>
    <errorConditionFormula>NOT(IDN_CASE_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c)  &amp;&amp; NOT(IDN_CASE_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c)  &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c &amp;&amp; NOT(ignoreEndDateValidation__c)</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
</ValidationRule>